RefPtr: Make operator bool() explicit.

As in shared_ptr<>, for instance.

See https://bugzilla.gnome.org/show_bug.cgi?id=626858#c4