glib/glibmm/refptr.h
@@ -165,7 +165,7 @@ public:
    *     do_something();
    * @endcode
    */
-  inline operator bool() const noexcept;
+  inline explicit operator bool() const noexcept;
 
 #ifndef GLIBMM_DISABLE_DEPRECATED
   /// @deprecated Use reset() instead because this leads to confusion with clear() methods on the
@@ -220,10 +220,6 @@ public:
    */
   template <class T_CastFrom>
   static inline RefPtr cast_const(const RefPtr<T_CastFrom>& src) noexcept;
-
-  // TODO: Maybe remove these if we replace operator bool() with operator const void* after
-  // an API/ABI break, as suggested by Daniel Elstner? murrayc.
-  // See bug https://bugzilla.gnome.org/show_bug.cgi?id=626858
 
   /** Compare based on the underlying instance address.
    *
